<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progess_music_play"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:progress="50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_music_thumbnail"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_albumart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progess_music_play" />

        <TextView
            android:id="@+id/text_music_title"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/title"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/image_music_thumbnail"
            app:layout_constraintRight_toLeftOf="@+id/button_rewind"
            app:layout_constraintTop_toBottomOf="@+id/progess_music_play" />

        <TextView
            android:id="@+id/text_music_artist"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="@string/artist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_music_thumbnail"
            app:layout_constraintRight_toLeftOf="@+id/button_rewind" />

        <ImageButton
            android:id="@+id/button_rewind"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_fast_rewind"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_play_pause"
            app:layout_constraintTop_toBottomOf="@+id/progess_music_play" />

        <ImageButton
            android:id="@+id/button_play_pause"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/ic_play"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_forward"
            app:layout_constraintTop_toBottomOf="@+id/progess_music_play" />

        <ImageButton
            android:id="@+id/button_forward"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/forward"
            android:src="@drawable/ic_fast_forward"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progess_music_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>