<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_music_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_music_title"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/scrimBackground"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="60dp"
            android:paddingRight="60dp"
            android:textColor="#FFFFDE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/button_toggle_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="12dp"
            android:background="@drawable/ic_favorite_border"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/toggle_favorite" />

        <ImageButton
            android:id="@+id/button_show_play_options"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="12dp"
            android:background="@drawable/ic_play_circle_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/show_play_options" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>